--- a/config/locale/fr_FR/client.po
+++ b/config/locale/fr_FR/client.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: app 1.0\n"
 "Report-Msgid-Bugs-To: contact@translation.io\n"
-"POT-Creation-Date: 2024-03-05 17:29+0100\n"
-"PO-Revision-Date: 2024-03-05 17:29+0100\n"
+"POT-Creation-Date: 2024-03-08 08:47+0100\n"
+"PO-Revision-Date: 2024-03-08 08:47+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: French\n"
 "Language: fr_FR\n"
@@ -248,8 +248,9 @@ msgid "My Plan (%{title})"
 msgstr "Mon plan (%{title})"
 
 #: ../../app/controllers/dmpopidor/plans_controller.rb:40
-#: ../../engines/madmp_opidor/app/controllers/api/v1/madmp/plans_controller.rb:74
-msgid "%{user_name} Plan"
+#: ../../app/controllers/dmpopidor/plans_controller.rb:342
+#: ../../app/controllers/plans_controller.rb:105
+msgid "%{user_name}'s Plan"
 msgstr "Plan de %{user_name}"
 
 #: ../../app/controllers/dmpopidor/plans_controller.rb:55
@@ -285,11 +286,6 @@ msgstr "PR"
 #: ../../app/controllers/dmpopidor/research_outputs_controller.rb:27
 msgid "Research output"
 msgstr "Produit de recherche"
-
-#: ../../app/controllers/dmpopidor/plans_controller.rb:342
-#: ../../app/controllers/plans_controller.rb:105
-msgid "%{user_name}'s Plan"
-msgstr "Plan de %{user_name}"
 
 #: ../../app/controllers/dmpopidor/plans_controller.rb:352
 msgid "imported"
@@ -1527,6 +1523,43 @@ msgstr ""
 #: ../../app/views/branded/shared/_create_account_form.html.erb:60
 msgid "Create account"
 msgstr "Créer un compte"
+
+#: ../../app/views/branded/devise/registrations/_api_token.html.erb:6
+msgid "Access token"
+msgstr "Jeton d'accès"
+
+#: ../../app/views/branded/devise/registrations/_api_token.html.erb:10
+msgid "Click the button below to generate an API token"
+msgstr "Cliquez sur le bouton ci-dessous pour générer un jeton API"
+
+#: ../../app/views/branded/devise/registrations/_api_token.html.erb:14
+msgid "Documentation"
+msgstr "Documentation"
+
+#: ../../app/views/branded/devise/registrations/_api_token.html.erb:16
+msgid ""
+"See the <a href=\"%{api_v0_wiki}\">documentation for v0</a> for more details on "
+"the API endpoints which include access to the list of all viewable DMP templat"
+"es, or your organisation’s guidance or statistics."
+msgstr ""
+"Consultez la <a href=\"%{api_v0_wiki}\">documentation de la v0</a> pour plus de "
+"détails sur les API qui incluent l'accès à la liste des modèles de DMP ou, aux"
+" recommandations ou statistiques de  votre organisation.\n"
+"\n"
+
+#: ../../app/views/branded/devise/registrations/_api_token.html.erb:18
+msgid ""
+"See the <a href=\"%{api_v1_wiki}\">documentation for v1</a> for more details on "
+"the API endpoints which enable the reuse of information structured in complian"
+"ce with the common DMP OPIDoR or <a href=\"%{rda_standard_url}\">RDA DMP Common "
+"standard</a> schemas. These include access to the schemas, registries, plans ("
+"whole DMP, DMP for a single research product) or information fragments, to whi"
+"ch the user has access."
+msgstr ""
+
+#: ../../app/views/branded/devise/registrations/_api_token.html.erb:21
+msgid "Regenerate token"
+msgstr "Régénérer le jeton"
 
 #: ../../app/views/branded/devise/registrations/_personal_details.html.erb:3
 msgid ""
@@ -3243,7 +3276,7 @@ msgid "Write Plan"
 msgstr "Rédiger"
 
 #: ../../app/views/branded/plans/_navigation.html.erb:53
-#: ../../app/views/branded/shared/export/_plan_coversheet.erb:103
+#: ../../app/views/branded/shared/export/_plan_coversheet.erb:109
 msgid "Budget"
 msgstr "Budget"
 
@@ -3438,22 +3471,22 @@ msgstr ""
 "ffectue dans l'onglet \"Rédiger\"."
 
 #: ../../app/views/branded/plans/budget.html.erb:15
-#: ../../app/views/branded/shared/export/_plan_coversheet.erb:107
+#: ../../app/views/branded/shared/export/_plan_coversheet.erb:113
 msgid "Cost type (Title)"
 msgstr "Type de coût (Titre)"
 
 #: ../../app/views/branded/plans/budget.html.erb:16
-#: ../../app/views/branded/shared/export/_plan_coversheet.erb:108
+#: ../../app/views/branded/shared/export/_plan_coversheet.erb:114
 msgid "Amount"
 msgstr "Montant"
 
 #: ../../app/views/branded/plans/budget.html.erb:17
-#: ../../app/views/branded/shared/export/_plan_coversheet.erb:109
+#: ../../app/views/branded/shared/export/_plan_coversheet.erb:115
 msgid "Lifecycle stage"
 msgstr "Etape du cycle de vie"
 
 #: ../../app/views/branded/plans/budget.html.erb:36
-#: ../../app/views/branded/shared/export/_plan_coversheet.erb:130
+#: ../../app/views/branded/shared/export/_plan_coversheet.erb:136
 msgid "General Budget"
 msgstr "Budget général"
 
@@ -3740,11 +3773,11 @@ msgstr "Affiliation"
 msgid "Roles"
 msgstr "Rôles"
 
-#: ../../app/views/branded/shared/export/_plan_coversheet.erb:140
+#: ../../app/views/branded/shared/export/_plan_coversheet.erb:146
 msgid "Copyright information:"
 msgstr "Droits d'auteur :"
 
-#: ../../app/views/branded/shared/export/_plan_coversheet.erb:143
+#: ../../app/views/branded/shared/export/_plan_coversheet.erb:149
 msgid ""
 " The above plan creator(s) have agreed that others may use as much of the text"
 " of this plan as they would like in their own plans, and customise it as neces"
@@ -4309,6 +4342,11 @@ msgstr ""
 "teur existant comme contact"
 
 #:
+#: ../../engines/madmp_opidor/app/controllers/api/v1/madmp/plans_controller.rb:74
+msgid "%{user_name} Plan"
+msgstr "Plan de %{user_name}"
+
+#:
 #: ../../engines/madmp_opidor/app/controllers/api/v1/madmp/plans_controller.rb:84
 #: ../../engines/madmp_opidor/app/controllers/api/v1/madmp/plans_controller.rb:87
 msgid "Invalid JSON"
@@ -4359,15 +4397,15 @@ msgstr "Erreur lors de l'enregistrement du formulaire."
 msgid "Unable to change the template's recommended status"
 msgstr "Impossible de changer le statut \"recommandé\" du modèle"
 
-#: ../../engines/madmp_opidor/app/services/import/plan_import_service.rb:96
+#: ../../engines/madmp_opidor/app/services/import/plan_import_service.rb:97
 msgid "Invalid JSON data"
 msgstr "Données JSON invalides"
 
-#: ../../engines/madmp_opidor/app/services/import/plan_import_service.rb:97
+#: ../../engines/madmp_opidor/app/services/import/plan_import_service.rb:98
 msgid "Invalid format"
 msgstr "Format invalide"
 
-#: ../../engines/madmp_opidor/app/services/import/plan_import_service.rb:101
+#: ../../engines/madmp_opidor/app/services/import/plan_import_service.rb:102
 msgid "File should begin with :dmp property"
 msgstr "Le fichier doit commencer par la propriété :dmp"
 
