profile/api translation

--- a/config/locale/fr_FR/client.po
+++ b/config/locale/fr_FR/client.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: app 1.0\n"
 "Report-Msgid-Bugs-To: contact@translation.io\n"
-"POT-Creation-Date: 2024-03-08 08:53+0100\n"
-"PO-Revision-Date: 2024-03-08 08:53+0100\n"
+"POT-Creation-Date: 2024-03-08 09:13+0100\n"
+"PO-Revision-Date: 2024-03-08 09:13+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: French\n"
 "Language: fr_FR\n"
@@ -1556,6 +1556,12 @@ msgid ""
 "whole DMP, DMP for a single research product) or information fragments, to whi"
 "ch the user has access."
 msgstr ""
+"Consultez la <a href=\"%{api_v1_wiki}\">documentation de la v1</a> pour plus de "
+"détails sur les API qui permettent la réutilisation des informations structuré"
+"es selon les schémas du modèle commun de DMP OPIDoR ou du modèle <a href=\"%{rd"
+"a_standard_url}\">RDA DMP Common standard</a>. Elles incluent l'accès aux schém"
+"as, référentiels, plans (PGD entier ou pour un produit de recherche), fragment"
+"s d'information, aux utilisateurs disposant des droits nécessaires.\n"
 
 #: ../../app/views/branded/devise/registrations/_api_token.html.erb:21
 msgid "Regenerate token"
