--- a/config/locale/en/client.po
+++ b/config/locale/en/client.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: app 1.0\n"
 "Report-Msgid-Bugs-To: contact@translation.io\n"
-"POT-Creation-Date: 2024-03-12 10:45+0100\n"
-"PO-Revision-Date: 2024-03-12 10:45+0100\n"
+"POT-Creation-Date: 2024-03-13 15:08+0100\n"
+"PO-Revision-Date: 2024-03-13 15:08+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -3458,8 +3458,12 @@ msgid "General Budget"
 msgstr "General Budget"
 
 #: ../../app/views/branded/plans/import.html.erb:6
-msgid "This feature is only available for structured templates."
-msgstr "This feature is only available for structured templates."
+msgid ""
+"This feature is currently only available for structured DMPs created in the co"
+"ntext of a research project."
+msgstr ""
+"This feature is currently only available for structured DMPs created in the co"
+"ntext of a research project."
 
 #: ../../app/views/branded/plans/import.html.erb:19
 msgid "Standard"
