--- a/config/locale/en/client.po
+++ b/config/locale/en/client.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: app 1.0\n"
 "Report-Msgid-Bugs-To: contact@translation.io\n"
-"POT-Creation-Date: 2024-03-13 15:08+0100\n"
-"PO-Revision-Date: 2024-03-13 15:08+0100\n"
+"POT-Creation-Date: 2024-03-14 14:33+0100\n"
+"PO-Revision-Date: 2024-03-14 14:33+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -1718,8 +1718,8 @@ msgid "First time visiting?"
 msgstr "First time visiting?"
 
 #: ../../app/views/branded/home/_welcome.html.erb:8
-msgid "Discover DMP OPIDoR in 180s!"
-msgstr "Discover DMP OPIDoR in 180s!"
+msgid "Discover DMP OPIDoR in three minutes!"
+msgstr "Discover DMP OPIDoR in three minutes!"
 
 #: ../../app/views/branded/layouts/_contact_icons.html.erb:15
 msgid "Technical Support"
