--- a/config/locale/fr_FR/client.po
+++ b/config/locale/fr_FR/client.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: app 1.0\n"
 "Report-Msgid-Bugs-To: contact@translation.io\n"
-"POT-Creation-Date: 2024-03-28 16:05+0100\n"
-"PO-Revision-Date: 2024-03-28 16:05+0100\n"
+"POT-Creation-Date: 2024-04-02 09:17+0200\n"
+"PO-Revision-Date: 2024-04-02 09:17+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: French\n"
 "Language: fr_FR\n"
@@ -1061,7 +1061,7 @@ msgstr "Expiration du compte dans %{tool_name}"
 msgid "Account expired in %{tool_name}"
 msgstr "Compte %{tool_name} expiré"
 
-#: ../../app/mailers/dmpopidor/user_mailer.rb:244
+#: ../../app/mailers/dmpopidor/user_mailer.rb:245
 #: ../../app/views/branded/user_mailer/client_sharing_notification.html.erb:5
 msgid "%{username} has granted access to their Data Management Plan in %{tool_name}"
 msgstr ""
@@ -4005,8 +4005,8 @@ msgid ""
 "ents can be found in the 'Write plan' tab by clicking on the Comments icon."
 msgstr ""
 "%{commenter} a clôturé la demande d'assistance conseil pour le plan \"%{link_ht"
-"ml}\". Les commentaires se trouvent dans l'onglet \"Rédiger un plan\" en cliquant"
-" sur l'icône Commentaires. "
+"ml}\". Les commentaires se trouvent dans l'onglet \"Rédiger\" en cliquant sur l'i"
+"cône Commentaires. "
 
 #: ../../app/views/branded/user_mailer/feedback_complete.html.erb:7
 msgid ""
@@ -4015,8 +4015,8 @@ msgid ""
 "nce/Comments)."
 msgstr ""
 "%{commenter} a clôturé la demande d'assistance conseil pour le plan \"%{link_ht"
-"ml}\". Les commentaires se trouvent dans l'onglet \"Rédiger un plan\" situé à dro"
-"ite de la page (Recommandations / Commentaires)."
+"ml}\". Les commentaires se trouvent dans l'onglet \"Rédiger\" situé à droite de l"
+"a page (Recommandations / Commentaires)."
 
 #: ../../app/views/branded/user_mailer/feedback_complete.html.erb:11
 msgid "Hello %{recipient_name}"
@@ -4045,16 +4045,16 @@ msgid ""
 "Comments can be found in the 'Write plan' tab by clicking on the Comments icon"
 "."
 msgstr ""
-"Les commentaires se trouvent dans l'onglet \"Rédiger un plan\" en cliquant sur l"
-"'icône Commentaires."
+"Les commentaires se trouvent dans l'onglet \"Rédiger\" en cliquant sur l'icône C"
+"ommentaires."
 
 #: ../../app/views/branded/user_mailer/new_comment.html.erb:4
 msgid ""
 "Comments can be found in the 'Write plan' tab on the right side of the page (G"
 "uidance/Comments)."
 msgstr ""
-"Les commentaires se trouvent dans l'onglet \"Rédiger un plan\" situé à droite de"
-" la page (Recommandations / Commentaires)."
+"Les commentaires se trouvent dans l'onglet \"Rédiger\" situé à droite de la page"
+" (Recommandations / Commentaires)."
 
 #: ../../app/views/branded/user_mailer/new_comment.html.erb:9
 msgid "Hello %{user_name}"
