changed the title 'Privacy policy' to 'Privacy statement' per Rachel's request, and all instances of 'CDL Privacy Policy' to 'CDL Privacy Statement'

--- a/config/locale/es/client.po
+++ b/config/locale/es/client.po
@@ -5181,7 +5181,7 @@ msgid ""
 "titutional requirements, to calculate storage requirements, or to assess deman"
 "d for data management services across disciplines. For a detailed description "
 "of what information (other than the plans) we collect from visitors to this we"
-"bsite and how it is used and managed, please see the CDL Privacy Policy and Ba"
+"bsite and how it is used and managed, please see the CDL Privacy Statement and Ba"
 "seline Supporting Practices listed at <a href=\"%{policies_url}\">%{policies_url"
 "}</a>"
 msgstr ""
