--- a/config/locale/fr_CA/client.po
+++ b/config/locale/fr_CA/client.po
@@ -2700,7 +2700,7 @@ msgid ""
 "titutional requirements, to calculate storage requirements, or to assess deman"
 "d for data management services across disciplines. For a detailed description "
 "of what information (other than the plans) we collect from visitors to this we"
-"bsite and how it is used and managed, please see the CDL Privacy Policy and Ba"
+"bsite and how it is used and managed, please see the CDL Privacy Statement and Ba"
 "seline Supporting Practices listed at <a href=\"%<policies_url>s\">%{policies_url"
 "}</a>"
 msgstr ""
@@ -2731,7 +2731,7 @@ msgstr ""
 
 #: ../../app/views/branded/static_pages/termsuse.html.erb:36
 msgid ""
-"As noted in the CDL privacy policy, this website uses Google Analytics to capt"
+"As noted in the CDL privacy statement, this website uses Google Analytics to capt"
 "ure and analyze usage statistics. You may choose to opt-out of having your web"
 "site activity tracked by Google Analytics. To do so, visit the <a href=\"%{opt_"
 "out_url}\">Google Analytics opt-out page</a> and install the add-on for your br"
