--- a/config/locales/translation.sv-FI.yml
+++ b/config/locales/translation.sv-FI.yml
@@ -67,6 +67,7 @@ sv-FI:
           tb: TB
           pb: PB
           eb: EB
+          zb:
       decimal_units:
         units:
           thousand: Tusen
@@ -116,6 +117,8 @@ sv-FI:
         other: "%{count} fel hindrade detta %{resource} från att sparas:"
       model_invalid: 'Validering misslyckades: %{errors}'
       required: måste finnas
+      password_too_long:
+      in:
     unavailable_session: |-
       Session %{id} är inte längre tillgänglig i minnet.
 
