--- a/config/locales/translation.en-CA.yml
+++ b/config/locales/translation.en-CA.yml
@@ -67,6 +67,7 @@ en-CA:
           tb: TB
           pb: PB
           eb: EB
+          zb:
       decimal_units:
         units:
           thousand: Thousand
@@ -116,6 +117,8 @@ en-CA:
       not_saved:
         one: '1 error prohibited this %{resource} from being saved:'
         other: "%{count} errors prohibited this %{resource} from being saved:"
+      password_too_long:
+      in:
     template:
       body: 'There were problems with the following fields:'
       header:
