--- a/config/locales/devise/devise.en-GB.yml
+++ b/config/locales/devise/devise.en-GB.yml
@@ -38,7 +38,7 @@ en-GB:
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account. If you do not receive the confirmation email, please check your spam filter."
+      signed_up_but_unconfirmed: "A confirmation email has been sent to your email address. It usually arrives within a few minutes but can sometimes take up to 10 minutes. Please wait and check your inbox and spam/junk folders after that time."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
       updated: "You updated your account successfully."
     sessions:
