--- a/config/locales/translation.en-CA.yml
+++ b/config/locales/translation.en-CA.yml
@@ -67,7 +67,6 @@ en-CA:
           tb: TB
           pb: PB
           eb: EB
-          zb:
       decimal_units:
         units:
           thousand: Thousand
@@ -117,8 +116,6 @@ en-CA:
       not_saved:
         one: '1 error prohibited this %{resource} from being saved:'
         other: "%{count} errors prohibited this %{resource} from being saved:"
-      password_too_long:
-      in:
     template:
       body: 'There were problems with the following fields:'
       header:
@@ -230,8 +227,7 @@ en-CA:
       not_found_in_database: Invalid %{authentication_keys} or password.
       timeout: Your session expired. Please sign in again to continue.
       unauthenticated: You need to sign in or sign up before continuing.
-      unconfirmed: You need to confirm your account before continuing. <a href="/users/confirmation/new"
-        class="a-orange">(Click to request a new confirmation email)</a>
+      unconfirmed: You have to confirm your email address before continuing.
       invited:
     mailer:
       confirmation_instructions:
